# textpolicy

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  pytest.ini
.github/: settings.yml
docs/: 00_hello_world.md  01_setup.md  02_rewards.md  03_generation_mlx_lm.md  04_environments.md  05_rollout_training.md  06_performance.md  07_testing.md  08_efficient_policies.md  09_cli.md  10_lora_qlora.md  11_sepa_significance.md  12_tinker_gpu.md  13_tinker_campaigns.md  INTEGRATION_GUIDE.md  QUICKSTART_UV.md  index.md  paper_experiment_checklist.md  research_note_maxrl_sepa.md
examples/: 01_hello_reward.py  02_reward_decorator.py  03_batch_processing.py  04_multiple_rewards.py  05_textpolicy_essence.py  06_minimal_training.py  08_real_rl_training.py  09_length_reduction_training.py  10_gspo_length_reduction_training.py  11_lora_qlora_training.py  README.md
experiments/: benchmark_batched.py  benchmark_checkpointing.py  countdown_baseline.py  countdown_reasoning_lora.py  profile_hardware.py  sweep_lr.py
paper/: main.tex  references.bib
scripts/: auc_analysis.py  benchmark_amdahl_v2.py  benchmark_sequence_packing.py  paper_campaign.py  reasoning_method_matrix.py  run_examples_fast.py  sepa_campaign.py  sepa_diagnostic_figure.py  sepa_dynamics_map.py  sepa_litmus.py  sepa_paper_report.py  sepa_significance.py  tinker_campaign.py  tinker_lr_sweep.py  tinker_wandb_follow.py  visualize_sepa.py
tests/: README.md  __init__.py  conftest.py  test_advantages.py  test_amdahl_bottlenecks.py  test_batched_generation.py  test_countdown.py  test_countdown_baseline.py  test_countdown_reasoning_lora.py  test_emergence_logger.py  test_gradient_checkpointing.py  test_grpo_gtpo.py  test_grpo_stability.py  test_gspo_verification.py  test_gtpo.py  test_gtpo_faithful.py  test_hicra.py  test_integration_e2e_training.py  test_issue_fixes.py  test_maxrl.py  test_mlx_compatibility.py  test_moe_models.py  test_profile_hardware_targets.py  test_profiling.py  test_prompt_reuse_stats.py  test_real_model_perf.py  test_reasoning_stack.py  test_regression_exact_output.py  test_reward_signatures.py  test_rollout_rewards.py  test_runner_step_enforcement.py  test_semantic_entropy.py  test_sepa.py  test_sepa_litmus.py  test_sepa_significance.py  test_strategic_grams.py  test_training_metrics.py  test_training_pipeline.py  test_validate_installation.py
textpolicy/: __init__.py  __main__.py  cli.py  validate.py
textpolicy/algorithms/: __init__.py  grpo.py  gspo.py  hicra.py  length_shaping.py
(+75 files in other folders)
