[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["textpolicy*"]

[project]
name = "textpolicy"
version = "0.1.2"
description = "Reinforcement learning for text generation on MLX (Apple Silicon): GRPO/GSPO, environments, rollout, rewards, LoRA/QLoRA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "mlx>=0.22.0", # Core MLX framework for Apple Silicon acceleration (tested up to 0.30.5)
    "mlx-lm>=0.22.0", # MLX language models for inference (tested up to 0.30.6)
    "gymnasium>=0.29.0",
    "psutil>=7.0.0",
    "wandb>=0.21.1",
    "aiohttp>=3.12.15",
    "pytest>=8.4.1",
]

keywords = [
    "reinforcement-learning",
    "text-generation",
    "mlx",
    "apple-silicon",
    "lora",
    "qlora",
    "grpo",
    "gspo",
    "rlhf",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/teilomillet/textpolicy"
Repository = "https://github.com/teilomillet/textpolicy"
Documentation = "https://github.com/teilomillet/textpolicy#readme"
Changelog = "https://github.com/teilomillet/textpolicy/blob/main/CHANGELOG.md"

[project.scripts]
textpolicy = "textpolicy.cli:main"

[project.optional-dependencies]
external = ["aiohttp>=3.8.0", "pydantic>=2.0.0"]
dev = ["pytest>=7.0.0", "black>=22.0.0", "ruff>=0.1.0"]
